--- a/configs/vitl_336.yaml
+++ b/configs/vitl_336.yaml
@@ -8,8 +8,8 @@ MODEL:
     IN_FEATURES: ["res2", "res3", "res4"]
     IGNORE_VALUE: 255
     NUM_CLASSES: 171
-    TRAIN_CLASS_JSON: "datasets/coco.json"
-    TEST_CLASS_JSON: "datasets/coco.json"
+    TRAIN_CLASS_JSON: "datasets/example.json"
+    TEST_CLASS_JSON: "datasets/example.json"
     CLIP_PRETRAINED: "ViT-L/14@336px"
     PROMPT_DEPTH: 0
     PROMPT_LENGTH: 0
