--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-scipy==1.7.0
-ftfy==6.0.1
-opencv-python==4.5.1.48
-setuptools==59.5.0
+scipy
+ftfy
+opencv-python
+setuptools
 pillow==8.2.0
 imageio==2.4.1
 timm==0.8.3.dev0
