--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -28,8 +28,8 @@ MODEL:
     CLIP_FINETUNE: "attention"
   PROMPT_ENSEMBLE_TYPE: "imagenet"
 DATASETS:
-  TRAIN: ("coco_2017_train_stuff_all_sem_seg",)
-  TEST: ("coco_2017_test_stuff_all_sem_seg",)
+  TRAIN: ("my_custom_dataset",)
+  TEST: ("my_custom_dataset",)
 SOLVER:
   IMS_PER_BATCH: 4
   BASE_LR: 0.0002
